--- a/train.ipynb
+++ b/train.ipynb
@@ -16,26 +16,30 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T_v6pTq8HsJg",
-        "outputId": "3998597e-00ed-4c6b-ff38-1b9c0cafbf80"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hi\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "print(\"hi\")"
+        "This notebook will train on given images.\n",
+        "\n",
+        "To do so, make sure the runtime is set to 'GPU'\n",
+        "before you 'run all'\n",
+        "\n",
+        "Afterwards, you just wait. sip tea or stare at a wall or something"
+      ],
+      "metadata": {
+        "id": "Hu2epXuvLMK5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "T_v6pTq8HsJg"
+      },
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/JesseVanDis/object_detection_lib.git\n",
+        "%cd ./object_detection_lib\n",
+        "!git submodule update --init"
       ]
     }
   ]
