--- a/train.ipynb
+++ b/train.ipynb
@@ -31,16 +31,44 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!apt update\n",
+        "!apt install -y cmake"
+      ],
+      "metadata": {
+        "id": "CDgcuxK-YBau"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "T_v6pTq8HsJg"
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "#%rm -rdf ./object_detection_lib\n",
         "!git clone https://github.com/JesseVanDis/object_detection_lib.git\n",
-        "%cd ./object_detection_lib\n",
+        "os.chdir('object_detection_lib')\n",
         "!git submodule update --init"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!rm -rdf /content/object_detection_lib/build\n",
+        "os.makedirs('/content/object_detection_lib/build', 0o777, True)\n",
+        "os.chdir('/content/object_detection_lib/build')\n",
+        "!cmake ../"
+      ],
+      "metadata": {
+        "id": "Q9JRapZ0W_ZT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
