--- a/train.ipynb
+++ b/train.ipynb
@@ -32,8 +32,18 @@
     {
       "cell_type": "code",
       "source": [
-        "!apt update\n",
-        "!apt install -y cmake"
+        "# Switch the Colab C++ compiler to g++-9.\n",
+        "!sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test\n",
+        "!sudo apt update\n",
+        "!sudo apt install gcc-9 g++-9\n",
+        "!update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 50\n",
+        "!update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 50\n",
+        "\n",
+        "# other dependencies\n",
+        "!apt install -y cmake\n",
+        "\n",
+        "# optional bonus stuff.\n",
+        "!python -m pip install fiftyone"
       ],
       "metadata": {
         "id": "CDgcuxK-YBau"
@@ -50,7 +60,8 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "#%rm -rdf ./object_detection_lib\n",
+        "os.chdir('/content')\n",
+        "%rm -rdf ./object_detection_lib\n",
         "!git clone https://github.com/JesseVanDis/object_detection_lib.git\n",
         "os.chdir('object_detection_lib')\n",
         "!git submodule update --init"
@@ -66,6 +77,18 @@
       ],
       "metadata": {
         "id": "Q9JRapZ0W_ZT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir('/content/object_detection_lib/build')\n",
+        "!make -j`nproc` object_detection_cli"
+      ],
+      "metadata": {
+        "id": "x8hBsjy3e6b7"
       },
       "execution_count": null,
       "outputs": []
