you can now manually set the port number in the server

--- a/train.ipynb
+++ b/train.ipynb
@@ -32,6 +32,50 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Source (host:port)\n",
+        "#@markdown leave empty to take 'browser-client-ip:8086'\n",
+        "source = '' #@param {type:\"string\"}\n",
+        "if(source == ''):\n",
+        "  import IPython\n",
+        "  from google.colab import output\n",
+        "  display(IPython.display.Javascript('''window.get_ip = new Promise(resolve => { setTimeout(() => { var xmlHttp = new XMLHttpRequest(); xmlHttp.open( \"GET\", \"https://api.ipify.org\", false ); xmlHttp.send( null ); resolve(xmlHttp.responseText);}, 100);});'''))\n",
+        "  source = output.eval_js('get_ip') + \":8086\";\n",
+        "print(\"source set to: '\" + source + \"'\")  "
+      ],
+      "metadata": {
+        "id": "SsDORfP96NYJ",
+        "outputId": "52b382ca-5e63-4b67-afaf-0825a1250607",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "window.get_ip = new Promise(resolve => { setTimeout(() => { var xmlHttp = new XMLHttpRequest(); xmlHttp.open( \"GET\", \"https://api.ipify.org\", false ); xmlHttp.send( null ); resolve(xmlHttp.responseText);}, 100);});"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "source set to: '86.81.245.125:8086'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Switch the Colab C++ compiler to g++-9.\n",
         "!sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test\n",
         "!sudo apt update\n",
