updated notebook to download the training data from the server

--- a/train.ipynb
+++ b/train.ipynb
@@ -39,7 +39,7 @@
         "  import IPython\n",
         "  from google.colab import output\n",
         "  display(IPython.display.Javascript('''window.get_ip = new Promise(resolve => { setTimeout(() => { var xmlHttp = new XMLHttpRequest(); xmlHttp.open( \"GET\", \"https://api.ipify.org\", false ); xmlHttp.send( null ); resolve(xmlHttp.responseText);}, 100);});'''))\n",
-        "  source = output.eval_js('get_ip') + \":8086\";\n",
+        "  source = \"http://\" + output.eval_js('get_ip') + \":8086\";\n",
         "print(\"source set to: '\" + source + \"'\")  "
       ],
       "metadata": {
@@ -108,6 +108,20 @@
       ],
       "metadata": {
         "id": "x8hBsjy3e6b7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir('/content/object_detection_lib/build/src')\n",
+        "#print(\"object_detection_cli --train_yolov3 ${source}\")\n",
+        "os.execl\n",
+        "!./object_detection_cli --train_yolov3 {source}"
+      ],
+      "metadata": {
+        "id": "OihMgF63DbXA"
       },
       "execution_count": null,
       "outputs": []
