installing fiftyone in the colab is now optional

--- a/train.ipynb
+++ b/train.ipynb
@@ -35,6 +35,7 @@
         "#@title Source (host:port)\n",
         "#@markdown leave empty to take 'browser-client-ip:8086'\n",
         "source = '' #@param {type:\"string\"}\n",
+        "install_fifty_one = True #@param {type:\"boolean\"}\n",
         "if(source == ''):\n",
         "  import IPython\n",
         "  from google.colab import output\n",
@@ -62,7 +63,7 @@
         "!apt install -y cmake\n",
         "\n",
         "# optional bonus stuff.\n",
-        "!python -m pip install fiftyone"
+        "!if [ {install_fifty_one} == True ]; then python -m pip install fiftyone; fi"
       ],
       "metadata": {
         "id": "CDgcuxK-YBau"
