learning graph will now be generated at every 100 iteration if doind so by the notebook

--- a/train.ipynb
+++ b/train.ipynb
@@ -90,10 +90,26 @@
     {
       "cell_type": "code",
       "source": [
+        "# patch ( take into account that we may have a short GPU session before getting kicked )\n",
+        "!sed -i 's/[+].10000/+10/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\" # \"if ((iteration >= (iter_save + 10000) || iteration % 10000 == 0)\" needs to be: \"if ((iteration >= (iter_save + 10) || iteration % 100 == 0)\"\n",
+        "!sed -i 's/[%].10000/%100/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\""
+      ],
+      "metadata": {
+        "id": "Fqf7STAvTeZo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#build\n",
         "#!rm -rdf /content/object_detection_lib/build\n",
         "os.makedirs('/content/object_detection_lib/build', 0o777, True)\n",
         "os.chdir('/content/object_detection_lib/build')\n",
-        "!cmake ../"
+        "!cmake ../\n",
+        "os.chdir('/content/object_detection_lib/build')\n",
+        "!make -j`nproc` object_detection_cli"
       ],
       "metadata": {
         "id": "Q9JRapZ0W_ZT"
@@ -104,20 +120,8 @@
     {
       "cell_type": "code",
       "source": [
-        "os.chdir('/content/object_detection_lib/build')\n",
-        "!make -j`nproc` object_detection_cli"
-      ],
-      "metadata": {
-        "id": "x8hBsjy3e6b7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#train\n",
         "os.chdir('/content/object_detection_lib/build/src')\n",
-        "#print(\"object_detection_cli --train_yolov3 ${source}\")\n",
         "os.execl\n",
         "!./object_detection_cli --train_yolov3 {source}"
       ],
