charts are now generater per 10'th iteration

--- a/train.ipynb
+++ b/train.ipynb
@@ -12,7 +12,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -91,13 +93,16 @@
       "cell_type": "code",
       "source": [
         "# patch ( take into account that we may have a short GPU session before getting kicked )\n",
-        "!sed -i 's/[+].10000/+10/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\" # \"if ((iteration >= (iter_save + 10000) || iteration % 10000 == 0)\" needs to be: \"if ((iteration >= (iter_save + 10) || iteration % 100 == 0)\"\n",
-        "!sed -i 's/[%].10000/%100/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\""
+        "!sed -i 's/[+].10000/+10/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\" # more frequent weights saving. \"if ((iteration >= (iter_save + 10000) || iteration % 10000 == 0)\" needs to be: \"if ((iteration >= (iter_save + 10) || iteration % 100 == 0)\"\n",
+        "!sed -i 's/[%].10000/%100/g' \"/content/object_detection_lib/3rdparty/darknet/src/detector.c\"\n",
+        "\n",
+        "!sed -i 's/current_batch.[/].100.[>].old_batch.[/].100/current_batch \\/ 10 > old_batch \\/ 10/g' \"/content/object_detection_lib/3rdparty/darknet/src/image_opencv.cpp\" # more frequent chart saving. \"(current_batch / 100 > old_batch / 100)\" needs to be: \"(current_batch / 10 > old_batch / 10)\"\n",
+        "\n"
       ],
       "metadata": {
         "id": "Fqf7STAvTeZo"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
