fixed fiftyone on colab ?

--- a/train.ipynb
+++ b/train.ipynb
@@ -65,7 +65,12 @@
         "!apt install -y cmake\n",
         "\n",
         "# optional bonus stuff.\n",
-        "!if [ {install_fifty_one} == True ]; then python -m pip install fiftyone; fi"
+        "!if [ {install_fifty_one} == True ]; then python -m pip install fiftyone; fi\n",
+        "\n",
+        "# Workaround for 'https://github.com/voxel51/fiftyone/issues/1499'. Include here globally, only then fiftyone works from the executable for some reason\n",
+        "if(install_fifty_one == True):\n",
+        "  import fiftyone as fo\n",
+        "  import fiftyone.zoo as foz"
       ],
       "metadata": {
         "id": "CDgcuxK-YBau"
@@ -102,7 +107,7 @@
       "metadata": {
         "id": "Fqf7STAvTeZo"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
